# mapf-IR

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENCE.txt  app.cpp  create_fig.py  generator.py  index.html  main.cpp  readme.md  visualize.sh
auto_record/: .gitignore  record.py
css/: custom.css
docs/: index.html
exp_scripts/: .gitignore  benchmark_generator.sh  exp_anytime_random-32-32-20.sh  exp_challenging_brc202d.sh  exp_challenging_ost000a.sh  exp_compare-optimal_random-32-32-10.sh  exp_compare-optimal_random-32-32-20.sh  exp_diff-init_refine_lak307d.sh  exp_diff-init_refine_lak503d.sh  exp_diff-init_refine_random-64-64-20.sh  exp_init-efficient_refine_arena.sh  exp_init-efficient_refine_lak503d.sh  exp_init-efficient_refine_random-32-32-20.sh  exp_init-inefficient_refine_arena.sh  exp_init-inefficient_refine_lak503d.sh  exp_init-inefficient_refine_random-32-32-20.sh  run.sh  run_appendix.sh  run_exp1.sh  run_exp2_arena.sh  run_exp2_brc202d.sh  run_exp2_den520d.sh  slack_notification.sh  util.sh
instance/: arena_100agents_1.txt  arena_100agents_10.txt  arena_100agents_11.txt  arena_100agents_12.txt  arena_100agents_13.txt  arena_100agents_14.txt  arena_100agents_15.txt  arena_100agents_16.txt  arena_100agents_17.txt  arena_100agents_18.txt  arena_100agents_19.txt  arena_100agents_2.txt  arena_100agents_20.txt  arena_100agents_21.txt  arena_100agents_22.txt  arena_100agents_23.txt  arena_100agents_24.txt  arena_100agents_25.txt  arena_100agents_26.txt  arena_100agents_27.txt  arena_100agents_28.txt  arena_100agents_29.txt  arena_100agents_3.txt  arena_100agents_30.txt  arena_100agents_31.txt  arena_100agents_32.txt  arena_100agents_33.txt  arena_100agents_34.txt  arena_100agents_35.txt  arena_100agents_36.txt  arena_100agents_37.txt  arena_100agents_38.txt  arena_100agents_39.txt  arena_100agents_4.txt  arena_100agents_40.txt  arena_100agents_41.txt  arena_100agents_42.txt  arena_100agents_43.txt  arena_100agents_44.txt  arena_100agents_45.txt  (+666 more)
instances/: arena_100agents_10.txt  arena_100agents_14.txt  arena_100agents_16.txt  arena_100agents_18.txt  arena_100agents_19.txt  arena_100agents_20.txt  arena_100agents_23.txt  arena_100agents_26.txt  arena_100agents_29.txt  arena_100agents_3.txt  arena_100agents_30.txt  arena_100agents_34.txt  arena_100agents_37.txt  arena_100agents_4.txt  arena_100agents_45.txt  arena_100agents_49.txt  arena_100agents_50.txt  arena_100agents_6.txt  arena_300agents_1.txt  arena_300agents_10.txt  arena_300agents_11.txt  arena_300agents_12.txt  arena_300agents_13.txt  arena_300agents_14.txt  arena_300agents_15.txt  arena_300agents_16.txt  arena_300agents_17.txt  arena_300agents_18.txt  arena_300agents_19.txt  arena_300agents_2.txt  arena_300agents_20.txt  arena_300agents_21.txt  arena_300agents_22.txt  arena_300agents_23.txt  arena_300agents_24.txt  arena_300agents_25.txt  arena_300agents_26.txt  arena_300agents_28.txt  arena_300agents_29.txt  arena_300agents_3.txt  (+534 more)
map/: .gitignore  128x72.map  6x6.map  8x8.map  AR0603SR.map  Berlin_1_256.map  Berlin_2_256.map  Paris_1_256.map  arena.map  connector.map  corners.map  den520d.map  empty-32-32.map  empty-64-64.map  lak103d.map  lak105d.map  lak307d.map  lak503d.map  loop-chain.map  ost000a.map  ost003d.map  sample.map  (+5 more)
mapf/: CMakeLists.txt
mapf/include/: cbs.hpp  cbs_refine.hpp  conflict.hpp  default_params.hpp  ecbs.hpp  ecbs_refine.hpp  graph.hpp  hca.hpp  icbs.hpp  icbs_refine.hpp  ir.hpp  ir_bottleneck.hpp  ir_configs.hpp  ir_fix_at_goals.hpp  ir_focus_goals.hpp  ir_focus_one_agent.hpp  ir_hybrid.hpp  ir_mdd.hpp  ir_paths.hpp  ir_single_paths.hpp  ir_tester.hpp  lib_cbs.hpp  lib_ir.hpp  lib_solver.hpp  meta_ir.hpp  paths.hpp  pibt.hpp  pibt_complete.hpp  pibt_icbs.hpp  plan.hpp  problem.hpp  push_and_swap.hpp  revisit_pp.hpp  solver.hpp  solver_refine.hpp  util.hpp  whca.hpp  winpibt.hpp
mapf/src/: cbs.cpp  cbs_refine.cpp  ecbs.cpp  ecbs_refine.cpp  graph.cpp  hca.cpp  icbs.cpp  icbs_refine.cpp  ir.cpp  ir_bottleneck.cpp  ir_configs.cpp  ir_fix_at_goals.cpp  ir_focus_goals.cpp  ir_focus_one_agent.cpp  ir_hybrid.cpp  ir_mdd.cpp  ir_paths.cpp  ir_single_paths.cpp  ir_tester.cpp  lib_cbs.cpp  meta_ir.cpp  paths.cpp  pibt.cpp  pibt_complete.cpp  pibt_icbs.cpp  plan.cpp  problem.cpp  push_and_swap.cpp  revist_pp.cpp  solver.cpp  solver_refine.cpp  whca.cpp  winpibt.cpp
(+442 files in other folders)
